tests/fixtures/invalid/bytes_in_bool.py
# Cannot use 'in' with Bytes and Bool
x: bool = b"hello" in True
